# nano-compositor-v1

./: LICENSE
tinywl/: Makefile  README.md  concurrent_queue.c  concurrent_queue.h  dig.txt  effector.c  linux-dmabuf-unstable-v1-client-protocol.c  linux-dmabuf-unstable-v1-client-protocol.h  logs.h  main.c  meson.build  nano_api.c  nano_compositor.h  nano_event.c  nano_ipc.h  nano_layer_compositor.h  nano_layer_input.h  nano_layers.c  nano_plugin.c  nano_server.c  shader.h  wayfire_capture_wrapper.c  wlr-export-dmabuf-unstable-v1-client-protocol.c  wlr-export-dmabuf-unstable-v1-client-protocol.h  wlr-export-dmabuf-unstable-v1.xml  wlr-virtual-pointer-unstable-v1-client-protocol.c  wlr-virtual-pointer-unstable-v1-client-protocol.h
tinywl/libdmabuf_share/: Makefile  dmabuf_share.c  dmabuf_share.h
tinywl/plugins/: dmabuf_creator_plugin.c  dmabuf_share_bindings.py  dockx_plugin.c  hosted_mouse_plugin.py  hosted_mouse_plugin2.py  hosted_mouse_plugin3.py  hosted_mouse_plugin4.py  js_loader_plugin.c  opengl_desktop2_plugin.c  opengl_desktop_plugin.c  package-lock.json  package.json  python2_plugin.c  python3_plugin.c  python4_plugin.c  python_plugin.c  real_mouse_plugin.c  shader_background_plugin.c  show_mouse_plugin.c  webgl_desktop_plugin.js  window_management_plugin.c  wobbly_plugin.c
tinywl/plugins/native-webgl/: binding.gyp  index.js  native_webgl.cc  package-lock.json  package.json
